--- a/index.html
+++ b/index.html
@@ -5,19 +5,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Portfolio Version 1</title>
+    <title>Online Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            text-align: center;
+        }
+        h2 {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-    About me: Hello!, I am Renz Xaviery O. Pastrana, a 2nd year Information Technology (IT) Student of University of Immaculate Conception (UIC). 
-    <br>
-    <br>
-    Favorites: Playing Mobile/PC Games, reading books, and watching movies and videos through online.
-    <br>
-    <br>
-    School Projects: During my Computer Programming 2, we did out Final Project along with my pair, in which that final project was all about the ICTDU Booking System. Our Project name was called "Book-It-Now". That project contains GUI, Sql(as our database), and more.
-    <br>
-    <br>
-    Talents: I kinda have the skills about the creativity of codes, and debugging some codes. 
-    <br>
+    <h2>About Me</h2>
+    <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology (IT) student at the University of Immaculate Conception (UIC).</p>
+
+    <h2>Favorites</h2>
+    <p>Playing Mobile/PC games, reading books, and watching movies and videos online.</p>
+
+    <h2>School Projects</h2>
+    <p>During my Computer Programming 2 course, my partner and I completed a final project called <strong>"Book-It-Now"</strong>. This ICTDU Booking System project included a GUI and SQL database.</p>
+
+    <h2>Talents</h2>
+    <p>I have skills in code creativity and debugging.</p>
 </body>
 </html>
