--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </style>
 </head>
 <body>
+    <p style="background-image: url('pic-1.jpg');"></p>
     <h2>About Me</h2>
     <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology (IT) student at the University of Immaculate Conception (UIC).</p>
 
