--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<html></html>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,33 +6,48 @@
     <title>Online Portfolio</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 20px;
             text-align: center;
+            background: linear-gradient(to bottom right, #ff9a9e, #fad0c4);
+            color: #333;
+        }
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            margin: 50px auto;
         }
         h2 {
-            font-size: 24px;
+            font-size: 28px;
             font-weight: bold;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            color: #6a1b9a;
         }
         p {
-            font-size: 18px;
-            margin-bottom: 20px;
+            font-size: 20px;
+            margin-bottom: 25px;
+        }
+        p strong {
+            color: #d81b60;
         }
     </style>
 </head>
 <body>
-    
-    <h2>About Me</h2>
-    <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology (IT) student at the University of Immaculate Conception (UIC).</p>
+    <div class="container">
+        <h2>About Me</h2>
+        <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology (IT) student at the University of Immaculate Conception (UIC).</p>
 
-    <h2>Favorites</h2>
-    <p>Playing Mobile/PC games, reading books, and watching movies and videos online.</p>
+        <h2>Favorites</h2>
+        <p>Playing Mobile/PC games, reading books, and watching movies and videos online.</p>
 
-    <h2>School Projects</h2>
-    <p>During my Computer Programming 2 course, my partner and I completed a final project called <strong>"Book-It-Now"</strong>. This ICTDU Booking System project included a GUI and SQL database.</p>
+        <h2>School Projects</h2>
+        <p>During my Computer Programming 2 course, my partner and I completed a final project called <strong>"Book-It-Now"</strong>. This ICTDU Booking System project included a GUI and SQL database.</p>
 
-    <h2>Talents</h2>
-    <p>I have skills in code creativity and debugging.</p>
+        <h2>Talents</h2>
+        <p>I have skills in code creativity and debugging.</p>
+    </div>
 </body>
 </html>
