--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
 
         <h2>Talents</h2>
         <p>I have skills in code creativity and debugging.</p>
+
+        <h2>External Links:</h2>
+        <a href="https://github.com/rxaviery">Github Profile</a>
+        <a href="https://www.facebook.com/renz.pastrana.16">Facebook</a>
+        <a href="https://rxaviery.github.io/html/fashionblog/index.html">Fashion Blog</a>
+
+
+
     </div>
 </body>
 </html>
