--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             margin-bottom: 15px;
             color: #6a1b9a;
         }
+        .pic{
+            display: block;
+            width: 250px;
+            margin-left: auto;
+            margin-right: auto;
+            border:3px solid #000000;
+            border-radius: 50%;
+        }
         p {
             font-size: 20px;
             margin-bottom: 25px;
@@ -37,6 +45,7 @@
 </head>
 <body>
     <div class="container">
+        <img class ="pic" src="https://rxaviery.github.io/pic.jpg" alt="">
         <h2>About Me</h2>
         <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology (IT) student at the University of Immaculate Conception (UIC).</p>
 
@@ -53,8 +62,6 @@
         <a href="https://github.com/rxaviery">Github Profile</a>
         <a href="https://www.facebook.com/renz.pastrana.16">Facebook</a>
         <a href="https://rxaviery.github.io/html/fashionblog/index.html">Fashion Blog</a>
-
-
 
     </div>
 </body>
