--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: 'Arial', sans-serif;
             margin: 20px;
             text-align: center;
-            background: linear-gradient(to bottom right, #ff9a9e, #fad0c4);
+            background: linear-gradient(to bottom right, #ff9a9e, #fad0c4, #ff9a9e);
             color: #333;
         }
 
@@ -141,11 +141,14 @@
         <img class="pic" src="https://rxaviery.github.io/pic.jpg" alt="">
         <h2>About Me</h2>
         <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology (IT) student at the University of Immaculate Conception (UIC).</p>
+        <img class="" src="https://rxaviery.github.io/smac.jpeg" alt="">
+        <p>I graduated from <strong>St. Mary's Academy of Caraga Inc</strong>, which is also an RVM school. This school taught me many things about Christianity and also how to be a Marian student.</p>
     </div>
 
     <div id="favorites" class="container">
         <h2>Favorites</h2>
-        <p>Playing Mobile/PC games, reading books, and watching movies and videos online.</p>
+        <p>The Favorite things that I love to do when passing time are <strong>Sleeping, Playing Mobile/PC games, reading books, and watching movies and videos online.</strong> </strong></p>
+        <p>I also like <strong>Listening to Music</strong> whenever I go anywhere. Music makes me calm despite of life challenges.</p>
     </div>
 
     <div id="projects" class="container">
@@ -156,6 +159,7 @@
     <div id="talents" class="container">
         <h2>Talents</h2>
         <p>I have skills in code creativity and debugging.</p>
+        <p>I can also play guitar.</p>
     </div>
 
     <div id="links" class="container">
