--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         p strong {
             color: #d81b60;
         }
+        .strong-left{
+            text-align: left;
+        }
 
         .button-container {
             margin-top: 20px;
@@ -67,6 +70,7 @@
             text-decoration: none;
             transition: background-color 0.3s ease;
         }
+        
 
         .button:hover {
             background-color: #d81b60;
@@ -145,11 +149,21 @@
         <p>I graduated from <strong>St. Mary's Academy of Caraga Inc</strong>, which is also an RVM school. This school taught me many things about Christianity and also how to be a Marian student.</p>
     </div>
 
-    <div id="favorites" class="container">
+    <<div class="container">
         <h2>Favorites</h2>
-        <p>The Favorite things that I love to do when passing time are <strong>Sleeping, Playing Mobile/PC games, reading books, and watching movies and videos online.</strong> </strong></p>
+        <p>The Favorite things that I love to do when passing time are:
+            <ul style= >
+                <li><p class="strong-left"><strong>Sleeping</strong></p></li>
+                <li><p class="strong-left"><strong>Playing Mobile/PC Games</strong></p></li>
+                <li><p class="strong-left"><strong>Reading Books</strong></p></li>
+                <li><p class="strong-left"><strong>Watching Movies and Videos Through Online</strong></p></li>
+            </ul>
+            <br>
+        </p>
         <p>I also like <strong>Listening to Music</strong> whenever I go anywhere. Music makes me calm despite of life challenges.</p>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Q3QRjA8MjzqpFaIkFludb?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
+    
 
     <div id="projects" class="container">
         <h2>School Projects</h2>
