--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             color: #333;
         }
 
-
         .container {
             background-color: rgba(255, 255, 255, 0.85);
             padding: 20px;
@@ -64,7 +63,6 @@
         .pic-smac {
             width: 220px;
             height: auto;
-
             border-radius: 23px;
         }
 
@@ -75,13 +73,6 @@
             margin-left: 20px;
             border-radius: 23px;
         }
-
-        .project-images {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-
 
         p {
             font-size: 20px;
@@ -99,10 +90,12 @@
         .smac {
             color: #1900ff;
         }
+
         .uic {
             color: #d8344c;
         }
-        .uic:hover{
+
+        .uic:hover {
             color: #1900ff;
         }
 
@@ -128,7 +121,6 @@
             text-decoration: none;
             transition: background-color 0.3s ease;
         }
-
 
         .button:hover {
             background-color: #d81b60;
@@ -195,9 +187,7 @@
 <body>
     <div class="nav-container">
         <nav>
-
             <ul>
-
                 <li><a href="#about" class="wie">About Me</a></li>
                 <li><a href="#education" class="wie">My Education</a></li>
                 <li><a href="#favorites" class="wie">Favorites</a></li>
@@ -209,73 +199,44 @@
     </div>
 
     <div id="about" class="container">
-        <img class="pic" src="https:\rxaviery.github.io\IMG_20240815_233122_587.jpg" alt="">
+        <img class="pic" src="https://rxaviery.github.io/IMG_20240815_233122_587.jpg" alt="Profile Picture">
         <h2>About Me</h2>
-        <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology
-            (IT) student at the University of Immaculate Conception (UIC). Let's explore together The world of
-            Technology!</p>
-        
-
+        <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology (IT) student at the University of Immaculate Conception (UIC). Let's explore together The world of Technology!</p>
     </div>
 
     <div id="education" class="container">
         <h2>My Education</h2>
-        <p> Current School: <strong><a href="https://www.facebook.com/uicph" class="uic">University of Immaculate
-                Conception</a></strong></p>
-                <img class="pic-smac" src="https://rxaviery.github.io/uic.png" alt="">
-                <p>I'm currently studying at the<a href="https://www.facebook.com/uicph" class="uic"> University of Immaculate Conception</a> as a Sophomore Information Technology (IT) student. I hope that I will finish my 4-year course here and gather knowledge about technology and coding in this institution.</p> <br>
+        <p>Current School: <strong><a href="https://www.facebook.com/uicph" class="uic">University of Immaculate Conception</a></strong></p>
+        <img class="pic-smac" src="https://rxaviery.github.io/uic.png" alt="University of Immaculate Conception logo">
+        <p>I'm currently studying at the <a href="https://www.facebook.com/uicph" class="uic">University of Immaculate Conception</a> as a Sophomore Information Technology (IT) student. I hope that I will finish my 4-year course here and gather knowledge about technology and coding in this institution.</p>
 
-
-
-                <p>Previous School:<strong> <a href="https://www.facebook.com/profile.php?id=100083127740646" class="uic">St. Mary's Academy of Caraga Inc.</a></strong></p>
-                <img class="pic-smac" src="https://rxaviery.github.io/image.png" alt="">
-        <p>I graduated from <a href="https://www.facebook.com/profile.php?id=100083127740646" class="smac">St. Mary's
-                Academy of Caraga Inc</a></strong>, which is also an RVM school. This school taught me many things about
-            Christianity and also how to be a Marian student.</p>
-
+        <p>Previous School: <strong><a href="https://www.facebook.com/profile.php?id=100083127740646" class="smac">St. Mary's Academy of Caraga Inc.</a></strong></p>
+        <img class="pic-smac" src="https://rxaviery.github.io/image.png" alt="St. Mary's Academy logo">
+        <p>I graduated from <a href="https://www.facebook.com/profile.php?id=100083127740646" class="smac">St. Mary's Academy of Caraga Inc</a>, which is also an RVM school. This school taught me many things about Christianity and also how to be a Marian student.</p>
     </div>
 
-    <div id="favorites"class="container">
+    <div id="favorites" class="container">
         <h2>Favorites</h2>
-        <p>The Favorite things that I love to do when passing time are:
-            <ul style=>
-                <li>
-                    <p class="strong-left"><strong>Sleeping</strong></p>
-                </li>
-                <li>
-                    <p class="strong-left"><strong>Playing Mobile/PC Games</strong></p>
-                </li>
-                <li>
-                    <p class="strong-left"><strong>Reading Books</strong></p>
-                </li>
-                <li>
-                    <p class="strong-left"><strong>Watching Movies and Videos Through Online</strong></p>
-                </li>
-            </ul>
-            <br>
-        </p>
-        <p>I also like <strong>Listening to Music</strong> whenever I go anywhere. Music makes me calm despite of life
-            challenges.</p>
-        <iframe style="border-radius:12px"
-            src="https://open.spotify.com/embed/track/2Q3QRjA8MjzqpFaIkFludb?utm_source=generator" width="100%"
-            height="352" frameBorder="0" allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p>The Favorite things that I love to do when passing time are:</p>
+        <ul>
+            <li><p class="strong-left"><strong>Sleeping</strong></p></li>
+            <li><p class="strong-left"><strong>Playing Mobile/PC Games</strong></p></li>
+            <li><p class="strong-left"><strong>Reading Books</strong></p></li>
+            <li><p class="strong-left"><strong>Watching Movies and Videos Through Online</strong></p></li>
+        </ul>
+        <p>I also like <strong>Listening to Music</strong> whenever I go anywhere. Music makes me calm despite life challenges.</p>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Q3QRjA8MjzqpFaIkFludb?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
-
 
     <div id="projects" class="container">
         <h2>School Projects</h2>
-        <p>During my Computer Programming 2 course, my partner and I completed a final project called
-            <strong>"Book-It-Now"</strong>. This ICTDU Booking System project included a GUI and SQL database.</p>
+        <p>During my Computer Programming 2 course, my partner and I completed a final project called <strong>"Book-It-Now"</strong>. This ICTDU Booking System project included a GUI and SQL database.</p>
         <p><strong>Here are some pictures of the System:</strong></p>
         <div class="project-images">
-            <img class="pic2" src="https://rxaviery.github.io/31bfea1a-30ef-42e3-89ed-00caabdee43d.jpg"
-                alt="Project Image 1">
-            <img class="pic3" src="https://rxaviery.github.io/c9220192-54b5-45e8-93da-dd0b41ff6b9b.jpg"
-                alt="Project Image 2">
+            <img class="pic2" src="https://rxaviery.github.io/31bfea1a-30ef-42e3-89ed-00caabdee43d.jpg" alt="Project Image 1">
+            <img class="pic3" src="https://rxaviery.github.io/c9220192-54b5-45e8-93da-dd0b41ff6b9b.jpg" alt="Project Image 2">
         </div>
     </div>
-
 
     <div id="talents" class="container">
         <h2>Talents</h2>
