--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,12 +14,15 @@
             font-family: 'Arial', sans-serif;
             margin: 20px;
             text-align: center;
-            background: linear-gradient(to bottom right, #ff9a9e, #fad0c4, #ff9a9e);
+            background-image: url('https://rxaviery.github.io/pic-1.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
             color: #333;
         }
 
         .container {
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.85);
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -38,8 +42,36 @@
             width: 150px;
             margin-left: auto;
             margin-right: auto;
-            border: 3px solid #000000;
-            border-radius: 10%;
+            border: 1px solid #000000;
+            border-radius: 23px;
+        }
+
+        .project-images {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .pic2,
+        .pic3 {
+            width: 220px;
+            height: auto;
+            border: 1px solid #000000;
+            border-radius: 23px;
+        }
+
+        .pic-smac {
+            width: 220px;
+            height: auto;
+            border-radius: 23px;
+        }
+
+        .pic-uic {
+            width: 60px;
+            height: auto;
+            float: left;
+            margin-left: 20px;
+            border-radius: 23px;
         }
 
         p {
@@ -50,8 +82,27 @@
         p strong {
             color: #d81b60;
         }
-        .strong-left{
+
+        .strong-left {
             text-align: left;
+        }
+
+        .smac {
+            color: #1900ff;
+        }
+
+        .uic {
+            color: #d8344c;
+        }
+
+        .uic:hover {
+            color: #1900ff;
+        }
+
+        .smac:hover {
+            color: #d81b60;
+            transition: color 0.3s ease;
+            text-decoration: none;
         }
 
         .button-container {
@@ -70,7 +121,6 @@
             text-decoration: none;
             transition: background-color 0.3s ease;
         }
-        
 
         .button:hover {
             background-color: #d81b60;
@@ -119,8 +169,13 @@
         }
 
         @keyframes click-flash {
-            0% { background-color: #d81b60; }
-            100% { background-color: #6a1b9a; }
+            0% {
+                background-color: #d81b60;
+            }
+
+            100% {
+                background-color: #6a1b9a;
+            }
         }
 
         .button:active {
@@ -128,11 +183,13 @@
         }
     </style>
 </head>
+
 <body>
     <div class="nav-container">
         <nav>
             <ul>
                 <li><a href="#about" class="wie">About Me</a></li>
+                <li><a href="#education" class="wie">My Education</a></li>
                 <li><a href="#favorites" class="wie">Favorites</a></li>
                 <li><a href="#projects" class="wie">School Projects</a></li>
                 <li><a href="#talents" class="wie">Talents</a></li>
@@ -142,32 +199,43 @@
     </div>
 
     <div id="about" class="container">
-        <img class="pic" src="https://rxaviery.github.io/pic.jpg" alt="">
+        <img class="pic" src="https://rxaviery.github.io/IMG_20240815_233122_587.jpg" alt="Profile Picture">
         <h2>About Me</h2>
-        <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology (IT) student at the University of Immaculate Conception (UIC).</p>
-        <img class="" src="https://rxaviery.github.io/smac.jpeg" alt="">
-        <p>I graduated from <strong>St. Mary's Academy of Caraga Inc</strong>, which is also an RVM school. This school taught me many things about Christianity and also how to be a Marian student.</p>
+        <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology (IT) student at the University of Immaculate Conception (UIC). Let's explore together The world of Technology!</p>
     </div>
 
-    <<div class="container">
-        <h2>Favorites</h2>
-        <p>The Favorite things that I love to do when passing time are:
-            <ul style= >
-                <li><p class="strong-left"><strong>Sleeping</strong></p></li>
-                <li><p class="strong-left"><strong>Playing Mobile/PC Games</strong></p></li>
-                <li><p class="strong-left"><strong>Reading Books</strong></p></li>
-                <li><p class="strong-left"><strong>Watching Movies and Videos Through Online</strong></p></li>
-            </ul>
-            <br>
-        </p>
-        <p>I also like <strong>Listening to Music</strong> whenever I go anywhere. Music makes me calm despite of life challenges.</p>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Q3QRjA8MjzqpFaIkFludb?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <div id="education" class="container">
+        <h2>My Education</h2>
+        <p>Current School: <strong><a href="https://www.facebook.com/uicph" class="uic">University of Immaculate Conception</a></strong></p>
+        <img class="pic-smac" src="https://rxaviery.github.io/uic.png" alt="University of Immaculate Conception logo">
+        <p>I'm currently studying at the <a href="https://www.facebook.com/uicph" class="uic">University of Immaculate Conception</a> as a Sophomore Information Technology (IT) student. I hope that I will finish my 4-year course here and gather knowledge about technology and coding in this institution.</p>
+
+        <p>Previous School: <strong><a href="https://www.facebook.com/profile.php?id=100083127740646" class="smac">St. Mary's Academy of Caraga Inc.</a></strong></p>
+        <img class="pic-smac" src="https://rxaviery.github.io/image.png" alt="St. Mary's Academy logo">
+        <p>I graduated from <a href="https://www.facebook.com/profile.php?id=100083127740646" class="smac">St. Mary's Academy of Caraga Inc</a>, which is also an RVM school. This school taught me many things about Christianity and also how to be a Marian student.</p>
     </div>
-    
+
+    <div id="favorites" class="container">
+        <h2>Favorites</h2>
+        <p>The Favorite things that I love to do when passing time are:</p>
+        <ul>
+            <li><p class="strong-left"><strong>Sleeping</strong></p></li>
+            <li><p class="strong-left"><strong>Playing Mobile/PC Games</strong></p></li>
+            <li><p class="strong-left"><strong>Reading Books</strong></p></li>
+            <li><p class="strong-left"><strong>Watching Movies and Videos Through Online</strong></p></li>
+        </ul>
+        <p>I also like <strong>Listening to Music</strong> whenever I go anywhere. Music makes me calm despite life challenges.</p>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Q3QRjA8MjzqpFaIkFludb?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
 
     <div id="projects" class="container">
         <h2>School Projects</h2>
         <p>During my Computer Programming 2 course, my partner and I completed a final project called <strong>"Book-It-Now"</strong>. This ICTDU Booking System project included a GUI and SQL database.</p>
+        <p><strong>Here are some pictures of the System:</strong></p>
+        <div class="project-images">
+            <img class="pic2" src="https://rxaviery.github.io/31bfea1a-30ef-42e3-89ed-00caabdee43d.jpg" alt="Project Image 1">
+            <img class="pic3" src="https://rxaviery.github.io/c9220192-54b5-45e8-93da-dd0b41ff6b9b.jpg" alt="Project Image 2">
+        </div>
     </div>
 
     <div id="talents" class="container">
@@ -186,4 +254,5 @@
     </div>
 
 </body>
+
 </html>
