--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
             <a href="https://github.com/rxaviery" class="button">Github Profile</a>
             <a href="https://www.facebook.com/renz.pastrana.16" class="button">Facebook</a>
             <a href="https://rxaviery.github.io/html/fashionblog/index.html" class="button">Fashion Blog</a>
+            <a href="https://rxaviery.github.io/healthy-recipes/index.html" class="button">Healthy Recipes</a>
         </div>
     </div>
 
