--- a/healthy-recipes/index.html
+++ b/healthy-recipes/index.html
@@ -40,8 +40,6 @@
   </ol>
 
   <p class="citation">Find this recipe and more <a href="http://www.myrecipes.com/recipe/kale-caesar-salad-chicken" target="_blank" class="external-link">here</a>.</p>
-  <a href="https://rxaviery.github.io/">Back to Main Page</a>
+html/fashionblog/index.html
 </body>
-
-
 </html>
