--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             font-family: 'Arial', sans-serif;
             margin: 20px;
             text-align: center;
-            background-image: url('https://rxaviery.github.io/pic-1.jpg');
+            background-image: url('https://rxaviery.github.io/pictures/pic-1.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -199,7 +199,7 @@
     </div>
 
     <div id="about" class="container">
-        <img class="pic" src="https://rxaviery.github.io/IMG_20240815_233122_587.jpg" alt="Profile Picture">
+        <img class="pic" src="https://rxaviery.github.io/pictures/IMG_20240815_233122_587.jpg" alt="Profile Picture">
         <h2>About Me</h2>
         <p><strong>Hello!</strong> I am <strong>Renz Xaviery O. Pastrana</strong>, a 2nd year Information Technology (IT) student at the University of Immaculate Conception (UIC). Let's explore together The world of Technology!</p>
     </div>
@@ -207,11 +207,11 @@
     <div id="education" class="container">
         <h2>My Education</h2>
         <p>Current School: <strong><a href="https://www.facebook.com/uicph" class="uic">University of Immaculate Conception</a></strong></p>
-        <img class="pic-smac" src="https://rxaviery.github.io/uic.png" alt="University of Immaculate Conception logo">
+        <img class="pic-smac" src="https://rxaviery.github.io/pictures/uic.png" alt="University of Immaculate Conception logo">
         <p>I'm currently studying at the <a href="https://www.facebook.com/uicph" class="uic">University of Immaculate Conception</a> as a Sophomore Information Technology (IT) student. I hope that I will finish my 4-year course here and gather knowledge about technology and coding in this institution.</p>
 
         <p>Previous School: <strong><a href="https://www.facebook.com/profile.php?id=100083127740646" class="smac">St. Mary's Academy of Caraga Inc.</a></strong></p>
-        <img class="pic-smac" src="https://rxaviery.github.io/image.png" alt="St. Mary's Academy logo">
+        <img class="pic-smac" src="https://rxaviery.github.io/pictures/image.png" alt="St. Mary's Academy logo">
         <p>I graduated from <a href="https://www.facebook.com/profile.php?id=100083127740646" class="smac">St. Mary's Academy of Caraga Inc</a>, which is also an RVM school. This school taught me many things about Christianity and also how to be a Marian student.</p>
     </div>
 
@@ -233,8 +233,8 @@
         <p>During my Computer Programming 2 course, my partner and I completed a final project called <strong>"Book-It-Now"</strong>. This ICTDU Booking System project included a GUI and SQL database.</p>
         <p><strong>Here are some pictures of the System:</strong></p>
         <div class="project-images">
-            <img class="pic2" src="https://rxaviery.github.io/31bfea1a-30ef-42e3-89ed-00caabdee43d.jpg" alt="Project Image 1">
-            <img class="pic3" src="https://rxaviery.github.io/c9220192-54b5-45e8-93da-dd0b41ff6b9b.jpg" alt="Project Image 2">
+            <img class="pic2" src="https://rxaviery.github.io/pictures/31bfea1a-30ef-42e3-89ed-00caabdee43d.jpg" alt="Project Image 1">
+            <img class="pic3" src="https://rxaviery.github.io/pictures/c9220192-54b5-45e8-93da-dd0b41ff6b9b.jpg" alt="Project Image 2">
         </div>
     </div>
 
