--- a/index.html
+++ b/index.html
@@ -5,187 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Portfolio</title>
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-            text-align: center;
-            background-image: url('https://rxaviery.github.io/pictures/pic-1.jpg');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            color: #333;
-        }
-
-        .container {
-            background-color: rgba(255, 255, 255, 0.85);
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 800px;
-            margin: 25px auto;
-        }
-
-        h2 {
-            font-size: 28px;
-            font-weight: bold;
-            margin-bottom: 15px;
-            color: #6a1b9a;
-        }
-
-        .pic {
-            display: block;
-            width: 150px;
-            margin-left: auto;
-            margin-right: auto;
-            border: 1px solid #000000;
-            border-radius: 23px;
-        }
-
-        .project-images {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        .pic2,
-        .pic3 {
-            width: 220px;
-            height: auto;
-            border: 1px solid #000000;
-            border-radius: 23px;
-        }
-
-        .pic-smac {
-            width: 220px;
-            height: auto;
-            border-radius: 23px;
-        }
-
-        .pic-uic {
-            width: 60px;
-            height: auto;
-            float: left;
-            margin-left: 20px;
-            border-radius: 23px;
-        }
-
-        p {
-            font-size: 20px;
-            margin-bottom: 25px;
-        }
-
-        p strong {
-            color: #d81b60;
-        }
-
-        .strong-left {
-            text-align: left;
-        }
-
-        .smac {
-            color: #1900ff;
-        }
-
-        .uic {
-            color: #d8344c;
-        }
-
-        .uic:hover {
-            color: #1900ff;
-        }
-
-        .smac:hover {
-            color: #d81b60;
-            transition: color 0.3s ease;
-            text-decoration: none;
-        }
-
-        .button-container {
-            margin-top: 20px;
-        }
-
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 16px;
-            color: #fff;
-            background-color: #6a1b9a;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-        }
-
-        .button:hover {
-            background-color: #d81b60;
-        }
-
-        .nav-container {
-            background-color: #6a1b9a;
-            padding: 10px 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-            border-radius: 10px;
-        }
-
-        a {
-            color: #6a1b9a;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .wie:hover {
-            color: #d81b60;
-            transition: color 0.3s ease;
-            text-decoration: none;
-        }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-size: 18px;
-        }
-
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
-
-        @keyframes click-flash {
-            0% {
-                background-color: #d81b60;
-            }
-
-            100% {
-                background-color: #6a1b9a;
-            }
-        }
-
-        .button:active {
-            animation: click-flash 0.3s ease-in-out;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
 </head>
 
 <body>
     <div class="nav-container">
+        <div class="burger">&#9776;</div>
         <nav>
             <ul>
                 <li><a href="#about" class="wie">About Me</a></li>
@@ -197,6 +23,14 @@
             </ul>
         </nav>
     </div>
+    <!-- try rag js -->
+    <script>
+        document.querySelector('.burger').addEventListener('click', function() {
+            const nav = document.querySelector('nav ul');
+            nav.style.display = nav.style.display === 'block' ? 'none' : 'block';
+        });
+    </script>
+    
 
     <div id="about" class="container">
         <img class="pic" src="https://rxaviery.github.io/pictures/IMG_20240815_233122_587.jpg" alt="Profile Picture">
