--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Portfolio</title>
-    <link rel="stylesheet" typehref="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     
 </head>
 
 <body>
-    <section>
-        <div class="wave wave1"></div>
-        <div class="wave wave2"></div>
-        <div class="wave wave3"></div>
-        <div class="wave wave4"></div>
-    
     <div class="off-screen-menu">
     <ul>
         <li><a href ="#about" class="off-screen-font">About Me</a></li>
@@ -193,8 +187,6 @@ const toggle = document.querySelector('.darkmode input');
             <a href="https://rxaviery.github.io/healthy-recipes/index.html" class="button">Healthy Recipes</a>
         </div>
     </div>
-
-    </section>
 
 </body>
 </html>
