--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
     
 </head>
 
 <body>
+    <section class="section1">
+        <div class="wave wave1"></div>
+        <div class="wave wave2"></div>
+        <div class="wave wave3"></div>
+        <div class="wave wave4"></div>
+    
     <div class="off-screen-menu">
     <ul>
         <li><a href ="#about" class="off-screen-font">About Me</a></li>
@@ -187,6 +193,8 @@ const toggle = document.querySelector('.darkmode input');
             <a href="https://rxaviery.github.io/healthy-recipes/index.html" class="button">Healthy Recipes</a>
         </div>
     </div>
+
+    </section>
 
 </body>
 </html>
