--- a/Wave try/index.html
+++ b/Wave try/index.html
@@ -45,6 +45,7 @@
     <h1>Weather App</h1>
     <p>Enter a city name to get the current weather:</p>
     <input type="text" id="city-input" placeholder="Enter city name">
+    <input type="text" name="" id="">
     <button id="get-weather">Get Weather</button>
 
     <div id="weather-container">
