--- a/index.html
+++ b/index.html
@@ -216,11 +216,12 @@ const toggle = document.querySelector('.darkmode input');
 
 <div id="api" class="container"> <h1>Weather App</h1>
     <p>Enter a city name to get the current weather:</p>
-    <input type="text" id="city-input" placeholder="Enter city name">
+    <input class="input1" type="text" id="city-input" placeholder="Enter city name">
+    
     <button id="get-weather">Get Weather</button>
 
     <div id="weather-container">
-        <div id="weather" class="weather-info">Weather details will appear here.</div>
+    <div id="weather" class="weather-info">Weather details will appear here.</div>
     </div></div>
 
         
