--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ const toggle = document.querySelector('.darkmode input');
 
         // Add event listener to the button
         document.getElementById('get-weather').addEventListener('click', fetchWeather);
+    </script>
 </script>
 
     <div id="about" class="container">
