--- a/index.html
+++ b/index.html
@@ -133,38 +133,6 @@ const toggle = document.querySelector('.darkmode input');
             }
         });
 
-        async function fetchWeather() {
-            const city = document.getElementById('city-input').value;
-            const apiKey = 'YOUR_API_KEY'; // Replace with your OpenWeatherMap API key
-            const apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`;
-
-            try {
-                const response = await fetch(apiUrl);
-                if (!response.ok) {
-                    throw new Error('City not found');
-                }
-                const data = await response.json();
-
-                // Display weather data
-                const weatherContainer = document.getElementById('weather');
-                weatherContainer.innerHTML = `
-                    <p><strong>City:</strong> ${data.name}</p>
-                    <p><strong>Temperature:</strong> ${data.main.temp}°C</p>
-                    <p><strong>Weather:</strong> ${data.weather[0].description}</p>
-                    <p><strong>Humidity:</strong> ${data.main.humidity}%</p>
-                    <p><strong>Wind Speed:</strong> ${data.wind.speed} m/s</p>
-                `;
-            } catch (error) {
-                console.error('Error fetching weather:', error);
-                const weatherContainer = document.getElementById('weather');
-                weatherContainer.innerHTML = `<p>Unable to fetch weather data. Please try again.</p>`;
-            }
-        }
-
-        // Add event listener to the button
-        document.getElementById('get-weather').addEventListener('click', fetchWeather);
-  
-
 </script>
 
     <div id="about" class="container">
@@ -240,6 +208,6 @@ const toggle = document.querySelector('.darkmode input');
             <a href="https://rxaviery.github.io/healthy-recipes/index.html" class="button">Healthy Recipes</a>
         </div>
     </div>
-
+<scrip src="../rxaviery.github.io/script.js"></script>
 </body>
 </html>
